--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "mongoose": "^8.2.2",
-    "passport-oauth": "^1.0.0"
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
