--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "@apollo/subgraph": "^2.7.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "mongoose": "^8.2.2",
     "passport-jwt": "^4.0.1"
   },
