--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "mongoose": "^8.2.2",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
