--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,7 @@
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "mongoose": "^8.2.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
