--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.10.2",
     "@apollo/subgraph": "^2.7.2",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
