--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
