--- a/app/package.json
+++ b/app/package.json
@@ -12,22 +12,26 @@
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "@apollo/subgraph": "^2.7.2",
+    "@graphql-tools/schema": "^10.0.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
-    "nodemon": "^3.1.0"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   }
 }
