--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "graphql-ws": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
