--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.10",
+    "aws-sdk": "^2.1612.0",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.16.0",
     "react": "^18.2.0",
